monitor-stack/prometheus/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitor-stack
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
