monitor-stack/prometheus/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitor-stack
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.kbtech.org`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    secretName: kbtech-tls # change to your cert name
